--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     font-family: 'Open Sans', sans-serif;
-    padding: 1rem 0;
+    padding: 2rem 0 0 0;
+    margin: 0;
 }
 h1 {
     font-family: 'Poppins', sans-serif;
@@ -23,6 +24,12 @@ h1 {
     border-radius: 1rem;
     border: 1px solid hsl(322, 100%, 66%);
     cursor: pointer;
+
+    transition: background-color 0.15s,color 0.15s;
+}
+.header-nav button:hover{
+    color: white;
+    background-color: hsl(322, 100%, 66%);
 }
 
 header{
@@ -32,12 +39,18 @@ header{
 }
 header h1 {
     font-size: 1.8rem;
-    margin: 0 1rem;
+    margin: 1rem 1rem;
 }
-header p {
-    color: hsl(118, 95%, 17%);
+header p ,
+main p{
+    color: hsl(118, 95%, 15%);
     font-weight: 600;
     margin: 2rem 1rem;
+}
+header p{
+    max-width: 40rem;
+    margin: auto;
+    margin-bottom: 1rem;
 }
 .Get-started {
     padding:0.9rem 3rem;
@@ -48,19 +61,38 @@ header p {
 
     border-radius: 2rem;
     border: none;
+
+    cursor: pointer;
+    transition: background-color 0.15s;
+
 }
+.Get-started:hover {
+    background-color: rgb(179, 0, 255);
+}
+
 main {
     text-align: center;
-    padding: 0 1.5rem;
 }
 main img {
-    width: 100%;
-    max-width: 40rem;
+    width: 90%;
+    max-width: 30rem;
 
     margin-bottom: 4rem;
 }
 
+main .section-1{
+    max-width: 60rem;
+    margin: auto;
+    margin-bottom: 3rem;
+}
+@media (min-width:900px) {
+    .section-1{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+}  
 main .section-1 p {
+    color: black;
     display: inline-block;
     font-weight: bold;
     font-size: 3rem;
@@ -92,9 +124,226 @@ main .section-1 p {
     color: gray;
 } 
 
+
 main .section-2 {
-    background-image: url("images/bg-section-top-mobile-1.svg");
+    background-color: hsl(207, 100%, 98%);
+    margin: 0;
+    padding: 5rem 1rem
+}
+main .section-2 h1 {
+    font-size: 1.5rem;
+}
+
+@media (min-width:900px) {
+    .section-2{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        grid-gap: 2rem;
+    }
+    .section-2 img {
+        order: 1;
+    }
+}  
+
+main .section-3{
+    padding:3rem 2rem
+}
+main .section-3 h1{
+    font-size: 1.5rem;
+}
+@media (min-width:900px) {
+    .section-3{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        grid-gap: 2rem;
+    }
+}  
+main .section-4{ 
+    background-color: hsl(207, 100%, 98%);
+    padding: 5rem 2rem;
+}
+main .section-4 h1 {
+    font-size: 1.5rem;
+}
+@media (min-width:900px) {
+    .section-4{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        align-items: center;
+        grid-gap: 2rem;
+    }
+    .section-4 img {
+        order: 1;
+    }
+}  
+main .section-5 {
+    margin: 5rem 0 10rem 0;
+}
+main .section-5 h1 {
+    font-size: 1.6rem;
+}
+main .section-5 button {
+    padding:0.9rem 3rem;
+    background-color: hsl(322, 100%, 66%);
+    color: white;
+    font-weight: bold;
+    margin-top: 1rem;
+
+    border-radius: 2rem;
+    border: none;
+    cursor: pointer;
+    transition: background-color 0.15s;
+
+}
+.section-5 button:hover {
+    background-color: rgb(179, 0, 255);
+
+}
+
+footer {
+    background-color: hsl(192, 100%, 9%);
+    color: white;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 3rem;
+    padding:3rem 2rem
+}
+footer p {
+    line-height: 1.8rem;
+}
+footer .section-1 h1{
+    font-size: 1.5rem;
+    
+}
+.input-button-container{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+footer .section-1 input{
+    padding: 0.8rem;
+    border: none;
+    border-radius: 0.3rem;
+}
+footer .section-1 button {
+    padding: 0.8rem 2rem;
+    color: white;
+    background-color: hsl(322, 100%, 66%);
+    font-weight: bold;
+    width: 10rem;
+    align-self: flex-end;
+
+    border: none;
+    border-radius: 0.3rem;
+    cursor: pointer;
+
+    transition: background-color 0.15s;
+}
+
+footer button:hover{
+    background-color: rgb(179, 0, 255);
+}
+
+@media (min-width:900px) {
+    footer{
+        grid-template-columns: 1fr 1fr;
+        grid-gap: 4rem;
+    }
+    footer .section-1 ,footer .section-2{
+        display: block;
+    }
+    footer .section-1 {
+        order: 1;
+    }
+    .input-button-container{
+        flex-direction: row;
+    }
+    input{
+        flex: 1;
+    }
+    .media{
+        justify-self: left;
+    }
+}
+.section-2 .info {
+    display: grid;
+    grid-gap: 1rem;
+}
+.info .phone::before {
+    content: "";
+    width: 18px;
+    height: 18px;
+    display: inline-block;
+    margin-right: 1rem;
+    background-image: url("images/icon-phone.svg");
     background-repeat: no-repeat;
     background-size: 100%;
-    background-color: pink;
+
+}
+.info .email::before {
+    content: "";
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    margin-right: 1rem;
+    vertical-align: middle;
+    background-image: url("images/icon-email.svg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+
+}
+
+.media {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.instagram {
+    font-size: 1.8rem;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    padding: 1% 0;
+}
+.instagram i {
+    cursor: pointer;
+}
+.twitter {
+    text-align: center;
+}
+.twitter i {
+    vertical-align: middle;
+}
+.facebook {
+    text-align: right;
+}
+.facebook i {
+    vertical-align: middle;
+    margin-right: 3px;
+    font-size: 1.4rem;
+}
+.facebook,
+.twitter {
+    width: 30px;
+    height: 30px;
+    font-size: 1.2rem;
+    background-color: white;
+    color: hsl(192, 100%, 9%);
+ 
+
+    border-radius: 3px;
+    cursor: pointer;
+}
+
+.facebook:hover,
+.twitter:hover{
+    background-color: rgb(31, 167, 221);
+}
+
+.instagram i:hover{
+   color: rgb(201, 29, 29);
 }
